Commit introduced build warnings in Windows #80328

Closed
opened 2020-09-01 16:09:15 +02:00 by Nikhil Shringarpurey · 5 comments

System Information
Operating system: Windows 10 1909 x64

Blender Version
Broken: As of commit 82a197cc7f
Worked: prior builds.

Short description of error
The changes to source/blender/gpu/opengl/gl_debug.cc return several compile warnings on Windows as the escape character "\e" is not supported. This results in several Warning C4129 messages for lines 66, 70, 78, 85, 91, and 93.

Exact steps for others to reproduce the error
Simply pulled latest code and compiled.

**System Information** Operating system: Windows 10 1909 x64 **Blender Version** Broken: As of commit 82a197cc7f74be2e8f4fbe2d40fc2aec100c4276 Worked: prior builds. **Short description of error** The changes to **source/blender/gpu/opengl/gl_debug.cc** return several compile warnings on Windows as the escape character "\e" is not supported. This results in several Warning C4129 messages for lines 66, 70, 78, 85, 91, and 93. **Exact steps for others to reproduce the error** Simply pulled latest code and compiled.
Author
Member

Added subscriber: @Nikhil.Net

Added subscriber: @Nikhil.Net
Author
Member

Added subscriber: @fclem

Added subscriber: @fclem
Author
Member

Tagged Clement as he committed the code in question.

Tagged Clement as he committed the code in question.

This issue was referenced by a708cdabe6

This issue was referenced by a708cdabe6ddf6b5d65e491cce0018b36695f443

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Clément Foucault self-assigned this 2020-09-01 16:18:34 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#80328
No description provided.