Fix T80328 Commit introduced build warnings in Windows